# minion-swarm

./: .gitignore  README.md  REQUIREMENTS.md  bootstrap.sh  claude-swarm.yaml.example  install.sh  minion-swarm  minion-swarm.yaml.example  pyproject.toml  requirements.txt  run-agent.sh  run-minion.sh
claude_swarm/: __init__.py  cli.py  config.py  daemon.py  watcher.py
crews/: ateam.yaml  ff1.yaml  minions.yaml  tmnt.yaml  voltron-lions.yaml  voltron-pilots.yaml
intel/: claude-code-stream-json.md  context-budget-breakdown.md  daemon-boot-hang.md  tool-overhead-tokens.md
intel/traps/: mcp-config-dev-null-hang.md
minion_swarm/: __init__.py  cli.py  config.py  daemon.py  spawn.py  watcher.py
minion_swarm/data/: minion-swarm.yaml.example
minion_swarm/data/crews/: ateam.yaml  ff1.yaml  minions.yaml  tmnt.yaml  voltron-lions.yaml  voltron-pilots.yaml
minion_swarm/providers/: __init__.py  base.py  claude.py  codex.py  gemini.py  opencode.py
scripts/: bootstrap.sh  install.sh  run-agent.sh  run-minion.sh  spawn-crew.sh
ts-daemon/: package-lock.json  package.json  run-test.sh  setup-auth.sh  test-sdk.ts  tsconfig.json
ts-daemon/src/: config.ts  contracts.ts  daemon.ts  main.ts  prompt.ts  rolling-buffer.ts  state.ts
